--- a/DL_ResNet.ipynb
+++ b/DL_ResNet.ipynb
@@ -16,8 +16,7 @@
         "id": "kN0NsJvQl9m9"
       },
       "source": [
-        "### Deep Learning - Mini Project 1\n",
-        "Faiz Ganz"
+        "### Deep Learning - Mini Project 1"
       ]
     },
     {
